<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/top_meme_text" />

    <EditText
        android:id="@+id/middleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/topText"
        android:layout_alignStart="@+id/topText"
        android:layout_below="@+id/topText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/middle_meme_text" />

    <EditText
        android:id="@+id/bottomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/middleText"
        android:layout_alignStart="@+id/middleText"
        android:layout_below="@+id/middleText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/bottom_meme_text" />

    <Button
        android:id="@+id/memeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:elevation="15dp"
        android:gravity="center"
        android:text="@string/dank_meme"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />
</RelativeLayout>